# mcpr

./: Cargo.toml  Makefile
.github/workflows/: rust.yml
architecture/: detailed_specification.md  development_permutations.md  final_design_document.md  generator_templates_evaluation.md  macro_architecture.md  macro_dependency_matrix.md  macro_relationships.md  state_machine_integration.md  state_machine_validation.md
examples/macros-example/: Cargo.toml  README.md  server_log.txt  test_by_parts.sh  test_stdio.sh
examples/macros-example/client/: Cargo.toml
examples/macros-example/client/src/: main.rs
examples/macros-example/server/: Cargo.toml
examples/macros-example/server/src/: main.rs
examples/macros-example/src/: main.rs
macros/: Cargo.toml
macros/src/: auth.rs  prompt.rs  resource.rs  server.rs  state.rs  tools.rs  transport.rs
macros/tests/: auth_test.rs  integration_test.rs  resource_test.rs  server_test.rs  state_test.rs  test.rs  transport_test.rs
mcpr-macros/: README.md
mcpr-macros/src/: client.rs  lib.rs  tool.rs  transport.rs
mcpr-macros/tests/: client_test.rs  prompt_test.rs
src/: auth.rs  client.rs  error.rs  lib.rs  macros.rs  main.rs  prompt.rs  resource.rs  server.rs  tools.rs
src/generator/: mod.rs
src/generator/templates/: mod.rs  sse.rs  stdio.rs
src/transport/: mod.rs  sse.rs  stdio.rs  tcp.rs  websocket.rs
tests/: server_macro_test.rs  server_test.rs  transport_macro_test.rs
