[package]
name = "mcpr"
version = "0.2.3"
edition = "2021"
description = "Rust implementation of Anthropic's Model Context Protocol"
authors = ["Chetan Conikee"]
license = "MIT"
repository = "https://github.com/conikeec/mcpr"
readme = "README.md"
keywords = ["mcp", "anthropic", "claude", "ai", "llm"]
categories = ["api-bindings", "command-line-utilities"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "MCP.md",
    ".github/workflows/rust.yml",
]

[workspace]
members = [
    "mcpr-macros",
    "examples/macros-example",
    # "mcpr-demo/server",  # Commented out as it doesn't exist
    # Add other workspace members as needed
]

[lib]
name = "mcpr"
path = "src/lib.rs"

[[bin]]
name = "mcpr"
path = "src/main.rs"

# Core dependencies for the mcpr library
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"], optional = true }
url = "2.2.2"                                                      # Using 2.2.2 for compatibility with examples
tiny_http = "0.12"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rand = "0.8"
tungstenite = { version = "0.20", features = ["native-tls"] }
mcpr-macros = { path = "./mcpr-macros", optional = true }

# Optional dependencies that are only used by specific features
[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
# Add cargo-husky for Git hooks
cargo-husky = { version = "1", features = [
    "precommit-hook",
    "run-cargo-clippy",
] }

[features]
default = []
async = ["tokio"]
macros = ["mcpr-macros"]

# Examples are now in their own separate crates with their own Cargo.toml files
