[package]
name = "mcpr-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the Model Context Protocol implementation"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
trybuild = "1.0"

[features]
default = []
integration_tests = []
